[package]
name = "seeking-consensus"
version = "0.1.0"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
serde = "1.0"
serde_json = "1.0"
stateright = { path = "../../../stateright" }
